# rust-rocket-api

./: .env  .gitignore  Cargo.toml  Makefile  diesel.toml  docker-compose.yml
migrations/2025-04-26-064239_create_user/: up.sql
src/: lib.rs  main.rs
src/api/dto/: auth.rs  generic.rs  mod.rs
src/api/handlers/: auth.rs
src/db/: migration.rs  mod.rs  pool.rs  schema.rs
src/db/models/: user.rs
src/db/repositories/: user.rs
src/tests/: mod.rs  test_utils.rs
src/tests/api/: auth.rs
src/tests/e2e/api/: auth.rs  auth_e2e_tests.rs  mod.rs
src/tests/int/api/: auth_int_test.rs  mod.rs
src/tests/integration/api/: auth.rs
src/tests/mocks/: mock_user_repository.rs  mod.rs
src/tests/unit/: bcrypt.rs  bcrypt_unit_test.rs  jwt.rs  jwt_unit_test.rs  mod.rs
src/tests/utils/: helpers.rs  mod.rs  setup.rs  test_db.rs  test_setup.rs
src/utils/: bcrypt.rs  jwt.rs
