[package]
name = "bookstore"
version = "0.1.0"
edition = "2024"
default-run = "bookstore"

[dependencies]
tokio = { version = "1.44.2", features = ["full"]}
rocket = { version = "0.5.1", features = ["json"] }

diesel = { version = "2.2.10", features = ["postgres", "uuid", "r2d2"] }
r2d2 = "0.8.10"

dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
